trunk/Archive2/f2/8b9fe5b16f848e/output
In file included from main.cpp:3:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/array:35:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/c++0x_warning.h:32:2: error: This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
#error This file requires compiler and library support for the \
 ^
main.cpp:8:10: error: no member named 'array' in namespace 'std'
    std::array<int, 10> s = {5, 7, 4, 2, 8, 6, 1, 9, 0, 3}; 
    ~~~~~^
main.cpp:8:19: error: expected '(' for function-style cast or type construction
    std::array<int, 10> s = {5, 7, 4, 2, 8, 6, 1, 9, 0, 3}; 
               ~~~^
main.cpp:8:25: error: use of undeclared identifier 's'
    std::array<int, 10> s = {5, 7, 4, 2, 8, 6, 1, 9, 0, 3}; 
                        ^
main.cpp:8:29: error: expected expression
    std::array<int, 10> s = {5, 7, 4, 2, 8, 6, 1, 9, 0, 3}; 
                            ^
main.cpp:11:15: error: use of undeclared identifier 's'
    std::sort(s.begin(), s.end());
              ^
main.cpp:12:18: error: use of undeclared identifier 's'
    for (int a : s) {
                 ^
main.cpp:12:16: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
    for (int a : s) {
               ^
main.cpp:18:15: error: use of undeclared identifier 's'
    std::sort(s.begin(), s.end(), std::greater<int>());
              ^
main.cpp:19:18: error: use of undeclared identifier 's'
    for (int a : s) {
                 ^
main.cpp:19:16: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
    for (int a : s) {
               ^
main.cpp:31:15: error: use of undeclared identifier 's'
    std::sort(s.begin(), s.end(), customLess);
              ^
main.cpp:32:18: error: use of undeclared identifier 's'
    for (int a : s) {
                 ^
main.cpp:32:16: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
    for (int a : s) {
               ^
main.cpp:38:15: error: use of undeclared identifier 's'
    std::sort(s.begin(), s.end(), [](int a, int b) {
              ^
main.cpp:41:18: error: use of undeclared identifier 's'
    for (int a : s) {
                 ^
main.cpp:41:16: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
    for (int a : s) {
               ^
main.cpp:45:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
5 warnings and 13 errors generated.
